Dev Update - Added Markers Mark!

--- a/UORespawnApp/Components/Pages/Home.razor
+++ b/UORespawnApp/Components/Pages/Home.razor
@@ -10,6 +10,9 @@
 {
     <div style="position: fixed; top: 0; left: 250px; right: 0; bottom: 0; background-image: url('splash.png'); background-size: cover; background-position: center; background-repeat: no-repeat; z-index: 0;">
     </div>
+    <a href="http://blackboxprogramming.runasp.net" target="_blank" style="position: fixed; bottom: 16px; right: 32px; z-index: 10;" title="Black Box Programming">
+        <span class="bi bi-box-fill" style="font-size: 50px; color: black;"></span>
+    </a>
 }
 else if (ViewService.CurrentView == "boxspawn" || ViewService.CurrentView == "mapview") // Support both for backward compatibility
 {
