--- a/UORespawnApp/Components/Pages/Home.razor
+++ b/UORespawnApp/Components/Pages/Home.razor
@@ -34,6 +34,10 @@ else if (ViewService.CurrentView == "instructions")
 {
     <InstructionsComponent />
 }
+else if (ViewService.CurrentView == "spawnpacks")
+{
+    <SpawnPacksComponent />
+}
 
 @code {
     protected override void OnInitialized()
